--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,10 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+ 
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(14, 4, 73);
 }
 
 .App-link {
@@ -35,4 +31,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.nav-item{
+  color: black;
 }
